# UniversalPython

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.py  test bash.txt  test.py  test.sh  test.txt  test_de.sh  test_fr.sh
.github/workflows/: deploy-docs.yml  release-to-pypi.yml  release-to-test-pypi.yml
.github/workflows/workflows/: test-pypi.yml
apps/jupyter-kernel/: README.rst
paper/: README  conference_101719.aux  conference_101719.bbl  conference_101719.blg  conference_101719.fdb_latexmk  conference_101719.fls  conference_101719.tex
paper/bibtex/: IEEEexample.bib
static/paper/: .gitignore  conference_101719.aux  conference_101719.tex
test/samples/cs/: hello-cs.py
test/samples/de/: german-py-meme.de.py  hello.de.py
test/samples/fr/: hello.fr.py
test/samples/ga/: loop.ga.py
test/samples/ua/: conditionals.ua.py
universalpython/: __init__.py  universalpython.py
universalpython/filters/translate/: argos_translator.py
universalpython/languages/: README.md
universalpython/languages/cs/: default.yaml
universalpython/languages/de/: de_native.lang.yaml  default.yaml
universalpython/languages/emoji/: README.md  default.yaml
universalpython/languages/fr/: default.yaml
universalpython/languages/ga/: default.yaml
universalpython/languages/hi/: default.yaml
universalpython/languages/hu/: default.yaml
universalpython/languages/ko/: default.yaml
universalpython/languages/ks/: default.yaml
universalpython/languages/ks_arb/: default.yaml
universalpython/languages/nl/: default.yaml
universalpython/languages/tr/: default.yaml
universalpython/languages/ua/: default.yaml
universalpython/languages/ur/: default.yaml
universalpython/modes/: lex.py
urdupython/languages/de/: de_native.lang.yaml
utils/: build_package.sh  fix_readme_links.py  requirements.txt
