[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universalpython"
version = "0.1.8-b.6"
authors = [
    {name = "Saad Bazaz", email = "saadbazaz@hotmail.com"},
]
description = "UniversalPython - Write Python in your native language"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Interpreters",
]
keywords = ["i18n", "localization", "programming-language"]
dependencies = [
    "ply>=3.11",
    "PyYAML>=6.0",
    "Unidecode>=1.3.6",
]

[project.urls]
Homepage = "https://universalpython.github.io"
Repository = "https://github.com/UniversalPython/UniversalPython"
Issues = "https://github.com/UniversalPython/UniversalPython/issues"

[tool.setuptools]
# If your package is in a 'src' directory:
# package-dir = {"" = "src"}
packages = ["universalpython"]

[tool.setuptools.package-data]
universalpython = ["languages/**/*.yaml", "modes/*.py"]

[project.scripts]
universalpython = "universalpython.universalpython:main"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = false
tag_format = "{version}"
build_command = "bash ./utils/build_package.sh"
commit_parser = "conventional"
major_on_zero = true
allow_zero_version = true
prerelease_token = "b"
changelog_file = "./CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "./CHANGELOG.md"
output_format = "md"

[tool.semantic_release.branches.release]
match = "release"
prerelease = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = true
prerelease_token = "b"